--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <nav class="zone green">
+    <nav class="zone blue sticky">
       <ul class="main-nav">
         <li ><a href="#">About</a></li>
         <li ><a href="#">Products</a></li>
@@ -14,7 +14,7 @@
         <li class="push"><a href="">Contact</a></li>
       </ul>
     </nav>
-    <div class="container zone red">Cover !!!</div>
+    <div class="container zone"><img class="cover" src="img/undraw.png" alt=""></div>
     <div class="zone blue grid-wrapper">
       <div class="box zone">
         <img src="img/files_2.png" alt="data storage">
